--- a/frontend/src/components/UserProfile.css
+++ b/frontend/src/components/UserProfile.css
@@ -3,7 +3,8 @@ body, html {
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: #333;
+    /* Usually components should not setup global styles */
+    /* background-color: #333; */
     font-family: Arial, sans-serif;
 }
 
@@ -134,5 +135,3 @@ body, html {
     width: 100%;
     text-align: center;
 }
-
-
