--- a/frontend/src/components/Marquee.css
+++ b/frontend/src/components/Marquee.css
@@ -4,9 +4,9 @@
   white-space: nowrap;
   box-sizing: border-box;
   width: 100%;
-  height: 200px;
-  background:  linear-gradient(to right, #000, #444);; /* Change to desired background color */
-  color: #fff; /* Change to desired text color */
+  height: 160px;
+  background: linear-gradient(to right, #2E008E, #FCC188); /*Change to desired background color */
+  color: #000; /* Change to desired text color */
   display: flex;
   align-items: center;
 }
@@ -16,7 +16,7 @@
   font-size: 140px;
   display: inline-block;
   padding-left: 100%;
-  animation: marquee 100s linear infinite; /* Ensure infinite looping */
+  animation: marquee 250s linear infinite; /* Ensure infinite looping */
 }
 
 @keyframes marquee {
