--- a/frontend/src/components/Marquee.css
+++ b/frontend/src/components/Marquee.css
@@ -4,16 +4,15 @@
   white-space: nowrap;
   box-sizing: border-box;
   width: 100%;
-  height: 160px;
-  background: linear-gradient(to right, #2E008E, #FCC188); /*Change to desired background color */
+  height: 100px;
+  background: linear-gradient(to right, #00FA9A, #1E90FF); /*Change to desired background color */
   color: #000; /* Change to desired text color */
   display: flex;
   align-items: center;
 }
 
 .marquee-content {
-  font-family: CompactaStd;
-  font-size: 120px;
+  font-size: 90px;
   display: inline-block;
   padding-left: 100%;
   animation: marquee 250s linear infinite; /* Ensure infinite looping */
