--- a/frontend/src/components/Marquee.css
+++ b/frontend/src/components/Marquee.css
@@ -10,21 +10,21 @@
     #00fa9a,
     #1e90ff
   ); /*Change to desired background color */
-  color: #000; /* Change to desired text color */
+  color: #fff; /* Change to desired text color */
   display: flex;
   align-items: center;
 }
 
 .marquee-content {
-  font-size: 90px;
+  font-size: 70px;
   display: inline-block;
   padding-left: 100%;
-  animation: marquee 250s linear infinite; /* Ensure infinite looping */
+  animation: marquee 200s linear infinite; /*Ensure infinite looping */
 }
 
 @keyframes marquee {
   0% {
-    transform: translateX(100%);
+    transform: translateX(0%);
   }
   100% {
     transform: translateX(-100%);
